--- a/index.css
+++ b/index.css
@@ -10,8 +10,8 @@
     h1 {
        margin-bottom: 15px;
     text-align: center;
-    color: #ff4532;
-    font-size: 50px;
+    color: black;
+    font-size: 55px;
     }
 
     section {
@@ -27,7 +27,7 @@
 
     div {
         position: relative;
-        background-color: gray;
+        background-color: #90EE90;
         border: 3.5px solid black;
         width: 100%;
         margin-left: auto;
